# screenshotapp

./: CMakeLists.txt  TODO.md
package/: metadata.desktop
package/contents/ui/: main.qml
plugin/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  screenshotgrabber.cpp  screenshotgrabber.h
